# vaultwarden-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/vaultwarden_mcp/: __init__.py  client.py  crypto.py  server.py
tests/: test_client.py  test_crypto.py
