[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaultwarden-mcp"
version = "0.2.0"
description = "MCP server for Vaultwarden / Bitwarden self-hosted instances"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
vaultwarden-mcp = "vaultwarden_mcp.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/vaultwarden_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"
